CHANGES FROM VERSION 2.1-3 ARE AS FOLLOWS

  A file was accidently included in Version 2.1-3 which
  meant that the package would not easily install under 
  C compilers other than gcc. This has been fixed.

CHANGES FROM VERSION 2.1-2 ARE AS FOLLOWS

  The function dextreme errored when the argument
  largest was FALSE. This has been fixed. The
  maintainer thanks Brian Tolley for reporting this.

CHANGES FROM VERSION 2.1-1 ARE AS FOLLOWS
  
  The function fbvevd now has arguments cshape, cscale
  and cloc for fitting common marginal parameters.

  The function fbvpot now has arguments cshape and 
  cscale for fitting common marginal parameters.

  The Husler-Reiss model is now implemented in fbvpot.

  New function chiplot for plotting estimates of the 
  dependence measures chi and chi-bar for bivariate 
  data.
   
  The latex file for The Users' Guide is now included
  in the doc directory along with the pdf file.

  The default x-label "theshold" in mrlplot has been
  corrected to "threshold". 

CHANGES FROM VERSION 2.1-0 ARE AS FOLLOWS

  New function fbvpot for fitting bivariate threshold
  models. A plot method for these models will be 
  implemented at a later date.

  New argument sym in function fbvevd, to allow the
  fitting of dependence structures under a symmetry
  constraint. The argument also exists in the new
  function fbvpot. 

CHANGES FROM VERSION 2.0-1 ARE AS FOLLOWS

  Univariate threshold models are now implemented. The main
  new function is fpot, which calculates maximum likelihood
  estimates under the generalized Pareto and point process
  representations.

  Density, distribution, quantile and simulation functions
  for the generalized Pareto distribution have been added.

  The new function clusters identifies extreme clusters. A
  related function exi calculates estimates of a quantity
  known as the extremal index.
  
  The new plotting functions mrlplot and tcplot aid
  threshold selection.
